--- a/Styles/style.css
+++ b/Styles/style.css
@@ -10,12 +10,12 @@ html {
 
 /*general elements --------------------------- */
 
-h1, h2, p {
+h1, h2, p, button {
     color: white;
     font-family: Square;
 }
 
-h1 {
+h1, button {
     font-size: 4vw;
 }
 
@@ -40,7 +40,7 @@ a img {
     vertical-align: top;
     margin: 0px;
     padding: 0px;
-    padding-top: .1vw;
+    padding-top: .0vw;
     background-color:white;
     z-index: 99;
 }
@@ -59,8 +59,32 @@ a img {
 }
 
 #header h1, h2 {
-  color: black;
-  text-align: center;
+    color: black;
+    text-align: center;
+}
+
+#header #langbutton {
+    position: absolute;
+    top: 3%;
+    right: 1%;
+    width: 4em;
+    height: 4em;
+    z-index: 100;
+    color:rgba(0, 0, 0, 0.95);
+}
+
+#header #langbutton p {
+    color: black;
+    opacity: 0%;
+}
+
+#header #langbutton:hover p {
+    opacity: 100%;
+}
+
+#header #langbutton img {
+    width: 100%;
+    height: 100%;
 }
 
 /* project section -------------------- */
