--- a/Styles/style2.css
+++ b/Styles/style2.css
@@ -21,7 +21,7 @@ h2 {
 }
 
 p {
-  font-size: 25px;
+  font-size: 2vw;
 }
 
 a img {
@@ -32,12 +32,15 @@ a img {
 #header {
   /*display: inline-block;*/
   position: sticky;
-  top: 0;
+  top: 0vw;
+  left: 0vw;
   vertical-align: top;
   margin: 0px;
   padding: 0px;
   padding-top: 0vw;
   background-color: white;
+  height: 5vw;
+  width: 98vw;
   z-index: 99;
 }
 #header h1 {
@@ -60,7 +63,7 @@ a img {
   margin-top: 0;
   top: -10%;
   right: 1%;
-  width: 10%;
+  width: 10vw;
   height: 100%;
   z-index: 100;
   clear: both;
@@ -134,6 +137,7 @@ main p {
   margin: 0px;
   text-align: right;
   pointer-events: none;
+  font-size: 120%;
 }
 .project div.project_overlay a {
   position: absolute;
@@ -142,8 +146,8 @@ main p {
   align-items: flex-end;
 }
 .project div.project_overlay a img {
-  width: 75px;
-  height: 75px;
+  width: 6vw;
+  height: 6vw;
 }
 .project div.project_overlay div.project_overlay_2 {
   position: absolute;
@@ -160,8 +164,9 @@ main p {
   align-items: flex-end;
 }
 .project div.project_overlay div.project_overlay_2 a img {
-  width: 75px;
-  height: 75px;
+  width: 6vw;
+  height: 6vw;
+  transform: transform(-50%, -50%);
   position: static;
   margin: 0px;
   padding: 0px;
