--- a/Styles/style2.css
+++ b/Styles/style2.css
@@ -96,7 +96,7 @@ main p {
 .project {
   position: relative;
   margin: 1vw auto auto auto;
-  width: 75%;
+  width: 75vw;
   font-size: 1.5vw;
 }
 .project img {
