--- a/Styles/style2.css
+++ b/Styles/style2.css
@@ -40,6 +40,7 @@ a img {
   padding-top: 0vw;
   background-color: white;
   height: 5vw;
+  max-height: 90px;
   width: 100%;
   z-index: 99;
 }
@@ -96,6 +97,7 @@ main p {
   position: relative;
   margin: 1vw auto auto auto;
   width: 75%;
+  max-width: 100px;
   font-size: 1.5vw;
 }
 .project img {
