project box size fix

--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -117,7 +117,7 @@ main p {
 	position: relative;
 	margin: 1vw auto auto auto;
 	width: 75%;
-    max-width: 800px;
+    //max-width: 800px;
 	font-size: 1.5vw;
 
     img {
