--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -23,20 +23,29 @@ h1, h2, p, button {
     font-family: Square;
 }
 
-h1, button {
-    font-size: 4vw;
-}
-
-h2 {
-    font-size: 1.5vw;
-}
-
 p {
     font-size: 2vw;
 }
 
-a img {
-    opacity: inherit;
+a {
+    font-weight: bold;
+    font-family: Square;
+}
+
+.whitespace {
+    height: 120px;
+}
+
+.sectionWhitespace {
+    height: 73px;
+}
+
+.smallWhitespace {
+    height: 60px;
+}
+
+.tinyWhitespace {
+    height: 20px;
 }
 
 /* header  ------------------------- */
@@ -50,66 +59,194 @@ a img {
     margin: 0px;
     padding: 0px;
     padding-top: .0vw;
-    background-color:white;
-    height: 5vw;
-    max-height: 90px;
+    background-color:#151515;
+    height: 10vh;
+    //min-height: 60px;
     width: 100%;
     z-index: 99;
 
+    h1, h2 {
+        margin-left: 5vw;
+    }
+
     h1 {
-        margin: 0px;
-        margin-bottom: 10px;
+        font-size: 7vh;
         font-weight: inherit;
         letter-spacing: 0;
+        margin-top: 0%;
+        padding-top: 0%;
     }
 
     h2 {
-        margin: 0px;
+        font-size: 3vh;
         font-weight: inherit;
-        margin-top: -10px;
+        margin-top: -3vh;
+        padding-top: 0%;
     }
 
-    h1, h2 {
-        color: black;
-        text-align: center;
+    a {
+        text-decoration: none;
+        color: #999999;
+        transition: color 0.3s;
+        cursor: pointer;
     }
 
-    #langbutton {
+    a#languageDropdown {
+        opacity: 0%;
+        width: 0;
+        height:0;
+    }
+
+    a:hover {
+        color: #FFFFFF;
+    }
+
+    #links {
         position: absolute;
-        margin-top: 0;
-        top: -10%;
-        right: 1%;
-        width: 15vw;
+            right: 20vh;
+            top: 25%;
         height: 100%;
-        z-index: 100;
-        clear: both;
-        display: grid;
-        grid-template-columns: 66% 33%;
+        width: 50%;
+        float: right;
 
-        p {
-            font-size: 2vw;
-            color: black;
-            opacity: 0%;
-            margin-right: 1vw;
-            text-align: right;
-            top: auto;
-        }
+        display: flex;
+        justify-content: space-evenly;
+        flex-wrap: nowrap;
+        //white-space: nowrap;
 
-        img {
-            margin-top: auto;
-            width: 90%;
-            height: 85%;
+        a {
+            position: relative;
+            display: block;
+            margin-left: 2vw;
+            margin-top: 0vw;
+
+            font-size: 4vh;
+            text-transform: uppercase;
         }
     }
 
-    #langbutton:hover p, #langbutton:active p {
+    .header_button {
+        position: absolute;
+            top: 0%;
+        
+        height: 100%;
+        float: right;
+        filter: invert(50%);
+
+        transition: all .5s;
+    }
+
+    #language .header_button {
+        right: 5vh;
         opacity: 100%;
+    }
+
+    #sandwich .header_button {
+        right: 5vh;
+        opacity: 0%;
+        pointer-events: none;
+    }
+
+    @media (max-aspect-ratio: 11/7)
+    {
+        #sandwich .header_button {
+            opacity: 100%;
+            pointer-events: all;
+            right: 5vh;
+        }
+
+        #language .header_button {
+            right: 15vh;
+        }
+
+        #links {
+            position: absolute;
+                top: 9vh;
+                left: 0;
+            background-color: #202020;
+            width: 100%;
+            flex-wrap: wrap;
+            align-content: flex-start;
+            height: 0vh;
+            transition: height 0.5s;
+
+            a {
+                text-align: right;
+                text-transform: uppercase;
+                margin-right: 5vw;
+                width: 100%;
+                opacity: 0%;
+                transition: opacity 0.5s;
+            }
+         }
+    }
+
+    @media (max-aspect-ratio: 4/7)
+    {
+        #language .header_button {
+            opacity: 0%;
+            pointer-events: none;
+        }
+    }
+
+    a:hover .header_button {
+        filter: opacity(100%);
+        opacity: 100%;
+        transition: all .5s;
+    }
+}
+
+/* carousel -------------------------------- */
+#carouselExampleIndicators {
+    //top: 75px;
+
+    .d-block {
+        height: 90vh;
+        object-fit: cover;
+    }
+
+    .carousel-item:before {
+        content: '';
+        position:absolute;
+        top:0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.75) 100%);
+        z-index: 1;
+    }
+    
+    @media (max-width: 980px)
+    {
+        h5 {
+            font-size: 2em;
+        }
+    
+        p {
+            font-size: 1.5em;
+        }
     }
 }
 
 /* project section -------------------- */
 
-main p {
+main {
+    background-color:#151515;
+
+    p {
+        text-align: center;
+    }
+
+    h1, button {
+        font-size: 4vw;
+    }
+    
+    h2 {
+        font-size: 1.5vw;
+    }
+}
+
+.title {
     text-align: center;
 }
 
@@ -160,6 +297,7 @@ main p {
             width: 50%;
             height: 100%;
             margin: 0px;
+            line-height: 2vw;
             text-align: right;
             pointer-events: none;
             font-size: 120%;
@@ -172,6 +310,7 @@ main p {
             align-items: flex-end;
 
             img {
+                opacity: inherit;
                 width: 6vw;
                 height: 6vw;
             }
@@ -192,6 +331,7 @@ main p {
                 align-items: flex-end;
 
                 img {
+                    opacity: inherit;
                     width: 6vw;
                     height: 6vw;
                     transform: transform(-50%, -50%);
@@ -206,4 +346,104 @@ main p {
 
 .project:hover div.project_overlay, .project:active div.project_overlay {
 	opacity: 1;
+}
+
+
+/* ------------------- ABOUT ----------------------------------------- */
+
+.about {
+    p {
+        font-size: 1.5vw;
+    }
+
+    a {
+        font-size: 2vw;
+        text-decoration: none;
+        color: #999999;
+        transition: color 0.3s;
+        cursor: pointer;
+        text-align: center;
+        left: auto;
+        margin-left: auto;
+        padding-left: auto;
+    }
+
+    a:hover {
+        color: #FFFFFF;
+    }
+
+    @media (max-width: 980px)
+    {
+        h2 {
+            font-size: 3em;
+        }
+    
+        p {
+            font-size: 2em;
+            text-align: center;
+        }
+    }
+
+    .center {
+        width: 75%;
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    .flex-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        align-items: center;
+        align-content: space-around;
+        padding: 0 10%;
+    
+        .text-left {
+            width: 50%;
+            min-width: 400px;
+            text-align: justify;
+        }
+    
+        .text-right {
+            width: 50%;
+            min-width: 400px;
+            text-align: right;
+        }
+
+        .link-container {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            flex-wrap: wrap;
+            align-items: center;
+            align-content: space-around;
+            height: 30vh;
+        }
+    
+        .image {
+            width: 40%;
+            //max-height: 400px;
+            min-width: 200px;
+
+            img {
+                width: 100%;
+            }
+        }
+
+        @media (max-width: 980px)
+        {
+            .text-left {
+                width: 80%;
+                min-width: 400px;
+            }
+
+            .image {
+                width: 80%;
+                margin-top: 50px;
+            }
+        }
+    }
+
+
 }
