--- a/Styles/style2.css
+++ b/Styles/style2.css
@@ -38,26 +38,45 @@ a img {
   margin: 0px;
   padding: 0px;
   padding-top: 0vw;
-  background-color: white;
-  height: 5vw;
-  max-height: 90px;
+  background-color: #151515;
+  height: 10vh;
   width: 100%;
   z-index: 99;
 }
 #header h1 {
-  margin: 0px;
-  margin-bottom: 10px;
   font-weight: inherit;
   letter-spacing: 0;
+  margin-left: 10vw;
+  margin-top: 0vw;
 }
 #header h2 {
-  margin: 0px;
   font-weight: inherit;
+  margin-left: 10vw;
   margin-top: -10px;
 }
-#header h1, #header h2 {
-  color: black;
-  text-align: center;
+#header #links {
+  height: 100%;
+  padding-right: 10%;
+  float: right;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: nowrap;
+}
+#header #links a {
+  position: relative;
+  display: block;
+  margin-top: 25px;
+  margin-left: 2vw;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: "Open Sans", sans;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #2A2A2A;
+  transition: color 0.3s;
+}
+#header #links a:hover {
+  color: #FFFFFF;
 }
 #header #langbutton {
   position: absolute;
@@ -97,7 +116,6 @@ main p {
   position: relative;
   margin: 1vw auto auto auto;
   width: 75%;
-  max-width: 100px;
   font-size: 1.5vw;
 }
 .project img {
