--- a/Styles/style.css
+++ b/Styles/style.css
@@ -137,6 +137,7 @@ a {
     align-content: flex-start;
     height: 0vh;
     transition: height 0.5s;
+    pointer-events: none;
   }
   #header #links a {
     text-align: right;
@@ -145,9 +146,10 @@ a {
     width: 100%;
     opacity: 0%;
     transition: opacity 0.5s;
+    pointer-events: none;
   }
 }
-@media (max-aspect-ratio: 4/7) {
+@media (max-aspect-ratio: 5/7) {
   #header #language .header_button {
     opacity: 0%;
     pointer-events: none;
@@ -174,12 +176,18 @@ a {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.75) 100%);
   z-index: 1;
 }
-@media (max-width: 980px) {
+#carouselExampleIndicators h5 {
+  font-size: 5vh;
+}
+#carouselExampleIndicators p {
+  font-size: 3vh;
+}
+@media (max-aspect-ratio: 11/7) {
   #carouselExampleIndicators h5 {
-    font-size: 2em;
+    font-size: 3vh;
   }
   #carouselExampleIndicators p {
-    font-size: 1.5em;
+    font-size: 2.5vh;
   }
 }
 
@@ -187,20 +195,17 @@ a {
 main {
   background-color: #151515;
 }
-main p {
-  text-align: center;
-}
-main h1, main button {
-  font-size: 4vw;
-}
-main h2 {
-  font-size: 1.5vw;
-}
 
 .title {
+  font-size: 4vw;
   text-align: center;
 }
 
+@media (max-aspect-ratio: 11/7) {
+  .title {
+    font-size: 7vw;
+  }
+}
 .project {
   position: relative;
   margin: 1vw auto auto auto;
@@ -287,6 +292,16 @@ main h2 {
   opacity: 1;
 }
 
+@media (max-aspect-ratio: 11/7) {
+  .project {
+    width: 90%;
+    font-size: 150%;
+  }
+  .project div.project_overlay p {
+    width: 55%;
+    line-height: 2.25vw;
+  }
+}
 /* ------------------- ABOUT ----------------------------------------- */
 .about p {
   font-size: 1.5vw;
@@ -306,12 +321,12 @@ main h2 {
   color: #FFFFFF;
 }
 @media (max-width: 980px) {
-  .about h2 {
-    font-size: 3em;
-  }
   .about p {
-    font-size: 2em;
+    font-size: 5vw;
     text-align: center;
+  }
+  .about a {
+    font-size: 5vw;
   }
 }
 .about .center {
@@ -345,7 +360,11 @@ main h2 {
   flex-wrap: wrap;
   align-items: center;
   align-content: space-around;
-  height: 30vh;
+  max-height: 20vh;
+}
+.about .flex-container .link-container p {
+  margin-left: 2vw;
+  margin-right: 2vw;
 }
 .about .flex-container .image {
   width: 40%;
