--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,41 +1,32 @@
 @font-face {
   font-family: Square;
-  src: url("FORCED SQUARE.ttf");
-}
+  src: url("FORCED SQUARE.ttf"); }
 html {
-  background-color: #151515;
-}
+  background-color: #151515; }
 
 /*general elements --------------------------- */
 h1, h2, p, button {
   color: white;
-  font-family: Square;
-}
+  font-family: Square; }
 
 p {
-  font-size: 2vw;
-}
+  font-size: 2vw; }
 
 a {
   font-weight: bold;
-  font-family: Square;
-}
+  font-family: Square; }
 
 .whitespace {
-  height: 120px;
-}
+  height: 120px; }
 
 .sectionWhitespace {
-  height: 73px;
-}
+  height: 73px; }
 
 .smallWhitespace {
-  height: 60px;
-}
+  height: 60px; }
 
 .tinyWhitespace {
-  height: 20px;
-}
+  height: 20px; }
 
 /* header  ------------------------- */
 #header {
@@ -46,266 +37,219 @@ a {
   vertical-align: top;
   margin: 0px;
   padding: 0px;
-  padding-top: 0vw;
+  padding-top: .0vw;
   background-color: #151515;
   height: 10vh;
   width: 100%;
-  z-index: 99;
-}
-#header h1, #header h2 {
-  margin-left: 5vw;
-}
-#header h1 {
-  font-size: 7vh;
-  font-weight: inherit;
-  letter-spacing: 0;
-  margin-top: 0%;
-  padding-top: 0%;
-}
-#header h2 {
-  font-size: 3vh;
-  font-weight: inherit;
-  margin-top: -3vh;
-  padding-top: 0%;
-}
-#header a {
-  text-decoration: none;
-  color: #999999;
-  transition: color 0.3s;
-  cursor: pointer;
-}
-#header a#languageDropdown {
-  opacity: 0%;
-  width: 0;
-  height: 0;
-}
-#header a:hover {
-  color: #FFFFFF;
-}
-#header #links {
-  position: absolute;
-  right: 20vh;
-  top: 25%;
-  height: 100%;
-  width: 50%;
-  float: right;
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: nowrap;
-}
-#header #links a {
-  position: relative;
-  display: block;
-  margin-left: 2vw;
-  margin-top: 0vw;
-  font-size: 4vh;
-  text-transform: uppercase;
-}
-#header .header_button {
-  position: absolute;
-  top: 0%;
-  height: 100%;
-  float: right;
-  filter: invert(50%);
-  transition: all 0.5s;
-}
-#header #language .header_button {
-  right: 5vh;
-  opacity: 100%;
-}
-#header #sandwich .header_button {
-  right: 5vh;
-  opacity: 0%;
-  pointer-events: none;
-}
-@media (max-aspect-ratio: 11/7) {
-  #header #sandwich .header_button {
-    opacity: 100%;
-    pointer-events: all;
-    right: 5vh;
-  }
-  #header #language .header_button {
-    right: 15vh;
-  }
+  z-index: 99; }
+  #header h1, #header h2 {
+    margin-left: 5vw; }
+  #header h1 {
+    font-size: 7vh;
+    font-weight: inherit;
+    letter-spacing: 0;
+    margin-top: 0%;
+    padding-top: 0%; }
+  #header h2 {
+    font-size: 3vh;
+    font-weight: inherit;
+    margin-top: -3vh;
+    padding-top: 0%; }
+  #header a {
+    text-decoration: none;
+    color: #999999;
+    transition: color 0.3s;
+    cursor: pointer; }
+  #header a#languageDropdown {
+    opacity: 0%;
+    width: 0;
+    height: 0; }
+  #header a:hover {
+    color: #FFFFFF; }
   #header #links {
     position: absolute;
-    top: 9vh;
-    left: 0;
-    background-color: #202020;
-    width: 100%;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    height: 0vh;
-    transition: height 0.5s;
-    pointer-events: none;
-  }
-  #header #links a {
-    text-align: right;
-    text-transform: uppercase;
-    margin-right: 5vw;
-    width: 100%;
-    opacity: 0%;
-    transition: opacity 0.5s;
-    pointer-events: none;
-  }
-}
-@media (max-aspect-ratio: 5/7) {
+    right: 20vh;
+    top: 25%;
+    height: 100%;
+    width: 50%;
+    float: right;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: nowrap; }
+    #header #links a {
+      position: relative;
+      display: block;
+      margin-left: 2vw;
+      margin-top: 0vw;
+      font-size: 4vh;
+      text-transform: uppercase; }
+  #header .header_button {
+    position: absolute;
+    top: 0%;
+    height: 100%;
+    float: right;
+    filter: invert(50%);
+    transition: all .5s; }
   #header #language .header_button {
+    right: 5vh;
+    opacity: 100%; }
+  #header #sandwich .header_button {
+    right: 5vh;
     opacity: 0%;
-    pointer-events: none;
-  }
-}
-#header a:hover .header_button {
-  filter: opacity(100%);
-  opacity: 100%;
-  transition: all 0.5s;
-}
+    pointer-events: none; }
+  @media (max-aspect-ratio: 11 / 7) {
+    #header #sandwich .header_button {
+      opacity: 100%;
+      pointer-events: all;
+      right: 5vh; }
+    #header #language .header_button {
+      right: 15vh; }
+    #header #links {
+      position: absolute;
+      top: 9vh;
+      left: 0;
+      background-color: #202020;
+      width: 100%;
+      flex-wrap: wrap;
+      align-content: flex-start;
+      height: 0vh;
+      transition: height 0.5s;
+      pointer-events: none; }
+      #header #links a {
+        text-align: right;
+        text-transform: uppercase;
+        margin-right: 5vw;
+        width: 100%;
+        opacity: 0%;
+        transition: opacity 0.5s;
+        pointer-events: none; } }
+  @media (max-aspect-ratio: 5 / 7) {
+    #header #language .header_button {
+      opacity: 0%;
+      pointer-events: none; } }
+  #header a:hover .header_button {
+    filter: opacity(100%);
+    opacity: 100%;
+    transition: all .5s; }
 
 /* carousel -------------------------------- */
 #carouselExampleIndicators .d-block {
   height: 90vh;
-  object-fit: cover;
-}
+  object-fit: cover; }
 #carouselExampleIndicators .carousel-item:before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.75) 100%);
-  z-index: 1;
-}
+  z-index: 1; }
 #carouselExampleIndicators h5 {
-  font-size: 5vh;
-}
+  font-size: 5vh; }
 #carouselExampleIndicators p {
-  font-size: 3vh;
-}
-@media (max-aspect-ratio: 11/7) {
+  font-size: 3vh; }
+@media (max-aspect-ratio: 11 / 7) {
   #carouselExampleIndicators h5 {
-    font-size: 3vh;
-  }
+    font-size: 3vh; }
   #carouselExampleIndicators p {
-    font-size: 2.5vh;
-  }
-}
+    font-size: 2.5vh; } }
 
 /* project section -------------------- */
 main {
-  background-color: #151515;
-}
+  background-color: #151515; }
 
 .title {
   font-size: 4vw;
-  text-align: center;
-}
+  text-align: center; }
 
-@media (max-aspect-ratio: 11/7) {
+@media (max-aspect-ratio: 11 / 7) {
   .title {
-    font-size: 7vw;
-  }
-}
+    font-size: 7vw; } }
 .project {
   position: relative;
   margin: 1vw auto auto auto;
   width: 75%;
-  font-size: 1.5vw;
-}
-.project img {
-  display: block;
-  width: 100%;
-}
-.project div.project_overlay {
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  right: 0%;
-  bottom: 0%;
-  display: flex;
-  padding: 0.6vw 0.75vw;
-  opacity: 0;
-  background: rgba(0, 0, 0, 0.95);
-  transition: all 0.1s linear;
-  color: #151515;
-}
-.project div.project_overlay * {
-  opacity: inherit;
-}
-.project div.project_overlay iframe {
-  position: absolute;
-  top: 3%;
-  left: 1%;
-  width: 40%;
-  height: 90%;
-  margin: 0px;
-}
-.project div.project_overlay p {
-  display: block;
-  position: absolute;
-  top: 4%;
-  right: 1%;
-  width: 50%;
-  height: 100%;
-  margin: 0px;
-  line-height: 2vw;
-  text-align: right;
-  pointer-events: none;
-  font-size: 120%;
-}
-.project div.project_overlay a {
-  position: absolute;
-  right: 1%;
-  bottom: 5%;
-  align-items: flex-end;
-}
-.project div.project_overlay a img {
-  opacity: inherit;
-  width: 6vw;
-  height: 6vw;
-}
-.project div.project_overlay div.project_overlay_2 {
-  position: absolute;
-  right: 1%;
-  bottom: 5%;
-  margin: 0px;
-  padding: 0px;
-  clear: both;
-  display: table-column;
-  column-count: 2;
-}
-.project div.project_overlay div.project_overlay_2 a {
-  position: static;
-  align-items: flex-end;
-}
-.project div.project_overlay div.project_overlay_2 a img {
-  opacity: inherit;
-  width: 6vw;
-  height: 6vw;
-  transform: transform(-50%, -50%);
-  position: static;
-  margin: 0px;
-  padding: 0px;
-}
+  font-size: 1.5vw; }
+  .project img {
+    display: block;
+    width: 100%; }
+  .project div.project_overlay {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    right: 0%;
+    bottom: 0%;
+    display: flex;
+    padding: .6vw .75vw;
+    opacity: 0;
+    background: rgba(0, 0, 0, 0.95);
+    transition: all .1s linear;
+    color: #151515; }
+    .project div.project_overlay * {
+      opacity: inherit; }
+    .project div.project_overlay iframe {
+      position: absolute;
+      top: 3%;
+      left: 1%;
+      width: 40%;
+      height: 90%;
+      margin: 0px; }
+    .project div.project_overlay p {
+      display: block;
+      position: absolute;
+      top: 4%;
+      right: 1%;
+      width: 50%;
+      height: 100%;
+      margin: 0px;
+      line-height: 2vw;
+      text-align: right;
+      pointer-events: none;
+      font-size: 120%; }
+    .project div.project_overlay a {
+      position: absolute;
+      right: 1%;
+      bottom: 5%;
+      align-items: flex-end; }
+      .project div.project_overlay a img {
+        opacity: inherit;
+        width: 6vw;
+        height: 6vw; }
+    .project div.project_overlay div.project_overlay_2 {
+      position: absolute;
+      right: 1%;
+      bottom: 5%;
+      margin: 0px;
+      padding: 0px;
+      clear: both;
+      display: flex;
+      flex-direction: row;
+      gap: 1vw; }
+      .project div.project_overlay div.project_overlay_2 a {
+        position: static; }
+        .project div.project_overlay div.project_overlay_2 a img {
+          opacity: inherit;
+          width: 6vw;
+          height: 6vw;
+          transform: transform(-50%, -50%);
+          position: static;
+          margin: 0px;
+          padding: 0px; }
 
 .project:hover div.project_overlay, .project:active div.project_overlay {
-  opacity: 1;
-}
+  opacity: 1; }
 
-@media (max-aspect-ratio: 11/7) {
+@media (max-aspect-ratio: 11 / 7) {
   .project {
     width: 90%;
-    font-size: 150%;
-  }
-  .project div.project_overlay p {
-    width: 55%;
-    line-height: 2.25vw;
-  }
-}
+    font-size: 150%; }
+    .project div.project_overlay p {
+      width: 55%;
+      line-height: 2.25vw; } }
 /* ------------------- ABOUT ----------------------------------------- */
 .about p {
-  font-size: 1.5vw;
-}
+  font-size: 1.5vw; }
 .about a {
   font-size: 2vw;
   text-decoration: none;
@@ -315,25 +259,19 @@ main {
   text-align: center;
   left: auto;
   margin-left: auto;
-  padding-left: auto;
-}
+  padding-left: auto; }
 .about a:hover {
-  color: #FFFFFF;
-}
+  color: #FFFFFF; }
 @media (max-width: 980px) {
   .about p {
     font-size: 5vw;
-    text-align: center;
-  }
+    text-align: center; }
   .about a {
-    font-size: 5vw;
-  }
-}
+    font-size: 5vw; } }
 .about .center {
   width: 75%;
   margin: 0 auto;
-  text-align: center;
-}
+  text-align: center; }
 .about .flex-container {
   display: flex;
   flex-direction: row;
@@ -341,47 +279,37 @@ main {
   flex-wrap: wrap;
   align-items: center;
   align-content: space-around;
-  padding: 0 10%;
-}
-.about .flex-container .text-left {
-  width: 50%;
-  min-width: 400px;
-  text-align: justify;
-}
-.about .flex-container .text-right {
-  width: 50%;
-  min-width: 400px;
-  text-align: right;
-}
-.about .flex-container .link-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  align-items: center;
-  align-content: space-around;
-  max-height: 20vh;
-}
-.about .flex-container .link-container p {
-  margin-left: 2vw;
-  margin-right: 2vw;
-}
-.about .flex-container .image {
-  width: 40%;
-  min-width: 200px;
-}
-.about .flex-container .image img {
-  width: 100%;
-}
-@media (max-width: 980px) {
+  padding: 0 10%; }
   .about .flex-container .text-left {
-    width: 80%;
+    width: 50%;
     min-width: 400px;
-  }
+    text-align: justify; }
+  .about .flex-container .text-right {
+    width: 50%;
+    min-width: 400px;
+    text-align: right; }
+  .about .flex-container .link-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: space-around;
+    max-height: 20vh; }
+    .about .flex-container .link-container p {
+      margin-left: 2vw;
+      margin-right: 2vw; }
   .about .flex-container .image {
-    width: 80%;
-    margin-top: 50px;
-  }
-}
+    width: 40%;
+    min-width: 200px; }
+    .about .flex-container .image img {
+      width: 100%; }
+  @media (max-width: 980px) {
+    .about .flex-container .text-left {
+      width: 80%;
+      min-width: 400px; }
+    .about .flex-container .image {
+      width: 80%;
+      margin-top: 50px; } }
 
 /*# sourceMappingURL=style.css.map */
